Correction overflow sur les barres de stats

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,6 +98,7 @@ ul li a {
 .progress-bar-fill {
     display: block;
     height: 15px;
+    max-width: 100%;
     background-color: #5ce011;
     transition: width 500ms ease-in-out;
 }
